# Tech-Challenge-Fase-3

./: .gitignore  LICENSE  README.md  generate_diagram.py  limpar.sh  main.py  pyproject.toml  run_finetune.sh
data/: pacientes_sinteticos.csv  prontuarios.db
docs/: diagrama_langgraph.md  relatorio_tecnico.md
fine_tuning/: avaliar_modelo.py  exportar_hf.py  importar_medquad.py  preparar_dados.py  testar_inferencia.py  treinar_modelo.py
fine_tuning/adapters/: adapter_config.json
src/: __init__.py  logger.py
src/db/: __init__.py  prontuarios.py
src/engine/: __init__.py  estado_atendimento.py  etapas_clinicas.py  grafo_clinico.py
src/rag/: __init__.py  busca_medquad.py
